[build-system]
requires = ["flit_core >=2.3.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "xfsort"
author = "Denis Anikin"
author-email = "ad@xfenix.ru"
home-page = "https://github.com/xfenix/xfsort"
description-file = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
