[build-system]
requires = ["flit_core >=2.3.0,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "sortpy"
requires-python = ">=3.7"
author = "Denis Anikin"
author-email = "ad@xfenix.ru"
home-page = "https://github.com/xfenix/xfsort"
description-file = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
