[tool.poetry]
name = "sortpy"
version = "1.1.0"
authors = ["Denis Anikin <ad@xfenix.ru>"]
license = "MIT"
description = "Various sorting algorithms in pure python"
readme = "README.md"
homepage = "https://github.com/xfenix/xfsort"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "*"
pytest-cov = "*"
flit = "*"
pytest-xdist = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
lexicographical = true
sections = ["FUTURE", "STDLIB", "FIRSTPARTY", "THIRDPARTY", "LOCALFOLDER"]
no_lines_before = ["STDLIB", "THIRDPARTY"]
known_third_party = []
known_local_folder = ["envcast",]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov . -n4 --cov-report term-missing"

[tool.pylint.format]
max-line-length=120

[tool.pylint.messages_control]
disable=["logging-fstring-interpolation"]
